# kadoa-sdks

./: .commitlintrc.cjs  .env.example  .envrc  .gitignore  .release-please-manifest.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  analysis.md  biome.json  branch_protection.json  output.txt  package.json  pr-body.md  pyproject.toml  release-please-config.json  turbo.json
.cursor/commands/: optimize-script.md
.cursor/rules/: envrc-direnv.mdc  local-scripts-folder.mdc  python-uv-patterns.mdc
.github/: .gitkeep  dependabot.yml
.github/workflows/: claude-code-review.yml  daily-fetch-openapi.yml  dependabot-lockfile.yml  manual-release.yml  preview-packages.yml  preview-release.yml  publish-node.yml  publish-on-release.yml  publish-python.yml  publish-sdk.yml  release-please.yml  sync-development.yml  update-spec-fingerprint.yml
.husky/: commit-msg
docs/: BRANCH_SETUP_CLI.md  DATA_VALIDATION_GUIDE.mdx  DEVELOPMENT_WORKFLOW.md  NOTIFICATIONS_GUIDE.mdx  SCHEMA_SDK_GUIDE.md  SDK_API_REFERENCE.md  SDK_TEST_GUIDE.md  VALIDATION_RULES_GUIDE.mdx
examples/browser-example/: README.md  index.html
examples/node-examples/: .env.example  (+5 more)
examples/python-examples/: .env.example  .envrc  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  run_extraction.py
examples/python-examples/src/: create-workflow-and-run-in-parallel.py  extraction-builder-demo.py  list-schemas.py  run-extraction-with-notifications.py  run-extraction-with-validation.py  run-extraction.py  run_extraction.py
specs/: README.md  openapi-metadata.json  openapi.json
(+326 files in other folders)
