[project]
name = "kadoa-python-examples"
version = "0.1.0"
description = "Example scripts for Kadoa Python SDK"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "kadoa-sdk @ file:///Users/branislavbellovic/WebstormProjects/kadoa-sdks/sdks/python",
]

[tool.ruff]
line-length = 100
target-version = "py311"
include = ["*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

